# pychess

./: .gitignore  pyproject.toml
pychess/: board.py  colors.py  coordinates.py  exceptions.py  piece.py
tests/: test_board.py  test_piece.py
