[tool.poetry]
name = "pychess"
version = "0.0.0"
description = ""
authors = ["Matias Taillade", "Rémi Mandart"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
black = "*"
flake8 = "*"
isort = "*"
pytest = "*"
pytest-cov = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
